tests/fail/parser-import3.dit
import Test from "/root/";

A {}